# ChangeLog for dev-ruby/rake
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/ChangeLog,v 1.23 2006/03/09 13:47:45 caleb Exp $

  09 Mar 2006; Caleb Tennis <caleb@gentoo.org> -rake-0.4.15.ebuild,
  -rake-0.4.15-r1.ebuild, -rake-0.5.3.ebuild:
  remove old files

*rake-0.7.0 (19 Jan 2006)

  19 Jan 2006; Caleb Tennis <caleb@gentoo.org> +rake-0.7.0.ebuild:
  Version bump

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> rake-0.6.2.ebuild:
  Stable on ppc.

  26 Nov 2005; Tom Gall <tgall@gentoo.org> rake-0.6.2.ebuild:
  added ~ppc64

  22 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org> rake-0.6.2.ebuild:
  Stable on sparc

  21 Nov 2005; Caleb Tennis <caleb@gentoo.org> rake-0.6.2.ebuild:
  x86 stable

  13 Nov 2005; Jason Wever <weeve@gentoo.org> rake-0.5.3.ebuild:
  Stable on SPARC.

*rake-0.6.2 (06 Oct 2005)

  06 Oct 2005; Caleb Tennis <caleb@gentoo.org> +rake-0.6.2.ebuild:
  New version

*rake-0.6.0 (23 Sep 2005)

  23 Sep 2005; Caleb Tennis <caleb@gentoo.org> -rake-0.4.4.ebuild,
  +rake-0.6.0.ebuild:
  Version bump, remove old version

  01 Aug 2005; Ferris McCormick <fmccor@gentoo.org> rake-0.5.3.ebuild:
  Add ~sparc keyword (required for rails).

  21 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> rake-0.5.3.ebuild:
  Stable on ppc.

  14 Apr 2005; Caleb Tennis <caleb@gentoo.org> rake-0.5.3.ebuild:
  x86 stable

*rake-0.5.3 (11 Apr 2005)

  11 Apr 2005; Caleb Tennis <caleb@gentoo.org> +rake-0.5.3.ebuild:
  Version bump

  01 Apr 2005; Caleb Tennis <caleb@gentoo.org> rake-0.5.0.ebuild:
  x86 stable

  30 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> rake-0.4.15-r1.ebuild,
  rake-0.5.0.ebuild:
  Added to ~ppc (Don't drop keywords, please).

*rake-0.5.0 (28 Mar 2005)

  28 Mar 2005; Caleb Tennis <caleb@gentoo.org> +rake-0.5.0.ebuild:
  Version bump

  08 Mar 2005; Caleb Tennis <caleb@gentoo.org> rake-0.4.15-r1.ebuild:
  x86 stable

*rake-0.4.15-r1 (15 Feb 2005)
