@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/rake-0.6.2.ebuild,v 1.5 2005/12/24 15:16:18 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/rake-0.6.2.ebuild,v 1.6 2006/03/19 16:14:54 corsair Exp $
 
 inherit ruby gems
 
@@ -14,7 +14,7 @@ SRC_URI="http://rubyforge.org/frs/download.php/6356/${P}.gem
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ppc ~ppc64 sparc x86"
+KEYWORDS="~amd64 ppc ppc64 sparc x86"
 IUSE=""
 RESTRICT="test"
 
