@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rake
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/ChangeLog,v 1.23 2006/03/09 13:47:45 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/ChangeLog,v 1.24 2006/03/19 16:14:54 corsair Exp $
+
+  19 Mar 2006; Markus Rothe <corsair@gentoo.org> rake-0.6.2.ebuild:
+  Stable on ppc64; bug #116875
 
   09 Mar 2006; Caleb Tennis <caleb@gentoo.org> -rake-0.4.15.ebuild,
   -rake-0.4.15-r1.ebuild, -rake-0.5.3.ebuild:
